--- a/Untitled3 (3).ipynb
+++ b/Untitled3 (3).ipynb
@@ -209,9 +209,9 @@
     "\n",
     "    # PML absorbing boundaries on all sides\n",
     "    pmls = [\n",
-    "        mp.Absorber(thickness=pml_thick, direction=mp.X),\n",
-    "        mp.Absorber(thickness=pml_thick, direction=mp.Y),\n",
-    "        mp.Absorber(thickness=pml_thick, direction=mp.Z),\n",
+    "        mp.PML(thickness=pml_thick, direction=mp.X),\n",
+    "        mp.PML(thickness=pml_thick, direction=mp.Y),\n",
+    "        mp.PML(thickness=pml_thick, direction=mp.Z),\n",
     "    ]\n",
     "\n",
     "    # Geometry: for Au/PEC, add a metal slab in the left half (x in [-0.75, 0])\n",
